Updated the directions and fixed a spelling mistake prevent the npm run build command from running.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "node_module/.bin/babel src -d dist"
+    "build": "node_modules/.bin/babel src -d dist"
   },
   "keywords": [],
   "author": "",
